--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-html-id": "^0.1.5",
     "react-scripts": "3.2.0"
   },
   "scripts": {
