--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
